--- a/index.html
+++ b/index.html
@@ -1,21 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" href="favicon.png">    
+    <link rel="stylesheet" href="index.css">
     <title>visualizer</title>
-    <style>
-    html,
-    body { 
-        min-height: 100%;
-        height: 100%;
-        margin: 0;
-        overflow: hidden;
-    }
-    .dg.a {
-        margin-right: 0 !important;
-    }
-    </style>
-    <script src="dat.gui.min.js" charset="utf-8"></script>
 </head>
 <body>
     <canvas></canvas>
